Fix #35 - Sermon cards too wide

--- a/src/app/components/molecules/sermon-card.scss
+++ b/src/app/components/molecules/sermon-card.scss
@@ -5,8 +5,6 @@ a {
 
   div.wrapper {
     position: relative;
-    height: 360px;
-    width: 480px;
     margin: 20px;
 
     img { 
@@ -20,7 +18,7 @@ a {
       left: 0;
       top: 0;
       right: 0;
-      bottom: 0;
+      bottom: 4px;
 
       display: flex;
       flex-direction: column;
